--- a/nomp/config.json
+++ b/nomp/config.json
@@ -3,7 +3,7 @@
     "logColors": true,
     "cliPort": 17117,
     "clustering": {
-        "enabled": true,
+        "enabled": false,
         "forks": "auto"
     },
     "defaultPoolConfigs": {
@@ -26,7 +26,7 @@
         }
     },
     "website": {
-        "enabled": true,
+        "enabled": false,
         "host": "0.0.0.0",
         "port": 8080,
         "stratumHost": "127.0.0.1",
