完成初步测试

--- a/nomp/config.json
+++ b/nomp/config.json
@@ -26,7 +26,7 @@
         }
     },
     "website": {
-        "enabled": false,
+        "enabled": true,
         "host": "0.0.0.0",
         "port": 8080,
         "stratumHost": "127.0.0.1",
