--- a/nomp/config.json
+++ b/nomp/config.json
@@ -3,7 +3,7 @@
     "logColors": true,
     "cliPort": 17117,
     "clustering": {
-        "enabled": true,
+        "enabled": false,
         "forks": "auto"
     },
     "defaultPoolConfigs": {
